--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,4 @@ dmypy.json
 ###############################################################################
 # Project specific ignores
 config.py
-idea
+.idea
